--- a/css/loader.css
+++ b/css/loader.css
@@ -62,27 +62,27 @@
 	@-webkit-keyframes spin {
 		0%{
 			-webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-	  		-ms-transform: rotate(0deg);  /* IE 9 */
-	     	transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+				-ms-transform: rotate(0deg);  /* IE 9 */
+					transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
 		}
 
 		100% {
 			-webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-	  		-ms-transform: rotate(360deg);  /* IE 9 */
-	     	transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+				-ms-transform: rotate(360deg);  /* IE 9 */
+					transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
 		}
 	}
 	@keyframes spin {
 		0%{
 			-webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-	  		-ms-transform: rotate(0deg);  /* IE 9 */
-	     	transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+	  			-ms-transform: rotate(0deg);  /* IE 9 */
+	     				transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
 		}
 
 		100% {
 			-webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-	  		-ms-transform: rotate(360deg);  /* IE 9 */
-	     	transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+	  			-ms-transform: rotate(360deg);  /* IE 9 */
+	     				transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
 		}
 	}
 
@@ -91,6 +91,7 @@
 		top:0;
 		width:51%;
 		height:100%;
+		background:#FFF;
 		z-index:1000;
 	}
 
