--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body{
-  background-color:#010101;
+  background-image: linear-gradient(#7303c0,#ec38bc,#fdeff9);
   font-family: 'Roboto', sans-serif;
-  color: #ffff;
+  color: #000000;
 }
 
 h2{
@@ -57,7 +57,10 @@ li{
 
 #history{
     padding: 5% 8%;
-    text-align: center;
+    text-align: left;
+}
+#his{
+  text-align: center;
 }
 .himg{
   padding-left: 25%;
@@ -68,16 +71,24 @@ li{
 /* Mathematics */
 #Maths{
   padding: 7% 12%;
+  text-align: left;
+}
+
+#mbgr{
   text-align: center;
 }
-
-.mimg{
-
-padding : 20px 0;
-
+.mimg1{
+  display: block;
+margin-left: auto;
+margin-right: auto;
+width: 25%;
 }
-
-
+ .center{
+   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+ }
 
 /* SLIDES */
 
