--- a/css/styles.css
+++ b/css/styles.css
@@ -63,10 +63,11 @@ li{
   text-align: center;
 }
 .himg{
-  padding-left: 25%;
+  padding-left: 35%;
+  padding-top: 15%;
 }
 .captio{
-  padding:10%;
+  padding:8%;
 }
 /* Mathematics */
 #Maths{
