--- a/css/appl.css
+++ b/css/appl.css
@@ -97,6 +97,9 @@ a:focus{
 
 /* SIDEBAR */
 #sidebar{
+    position: sticky;
+    top:0;
+    height: 100vh;
   width:38%;
     background: #005086;
     color:#fff;
