--- a/css/appl.css
+++ b/css/appl.css
@@ -174,18 +174,25 @@ padding: 10px;
 
 }
 /* ART */
-
-
- img.ImageV{
-background: url('images/Monalisa.webp');
-    height: 220px;
+.Image{
+width:250px;
+height:154.5px;
+display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
+.ImageV{
+  height:250px;
   width:154.5px;
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+
 }
-img.ImageV:hover{
-background: url('images/monalisa1.png');
-height: 220px;
-width:154.5px;
-}
+
+ 
 @media(maz-width:768px){
     #sidebar{margin-left:-250px;}
     #sidebar.active{
