--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,25 @@ width: 25%;
   font-weight: lighter;
   }
 
+#button {
+    width: 6em;
+    border: 2px solid green;
+    background: #ffe;
+    border-radius: 5px;
+}
+a {
+    display: block;
+    width: 100%;
+    line-height: 2em;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+}
+a:hover {
+    color: red;
+    background: #eff;
+}
+
 @media (max-width:1000px) {
 
 .mimg{
