--- a/css/styles.css
+++ b/css/styles.css
@@ -113,9 +113,10 @@ width: 25%;
 
 #button {
     width: 6em;
-    border: 2px solid green;
+    border: 2px solid #7303c0;
     background: #ffe;
     border-radius: 5px;
+    
 }
 a {
     display: block;
@@ -123,11 +124,14 @@ a {
     line-height: 2em;
     text-align: center;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 20px;
+    align-items: center;
+    font-family:inherit;
 }
 a:hover {
-    color: red;
-    background: #eff;
+    color: #7303c0;
+    background: #fff;
+    cursor:pointer;
 }
 
 @media (max-width:1000px) {
