--- a/css/styles.css
+++ b/css/styles.css
@@ -111,11 +111,12 @@ width: 25%;
   font-weight: lighter;
   }
 
-#button {
+#but_ton {
     width: 6em;
     border: 2px solid #7303c0;
     background: #ffe;
-    border-radius: 5px;
+    border-radius: 50%;
+    align-items: center;
     
 }
 a {
@@ -124,8 +125,6 @@ a {
     line-height: 2em;
     text-align: center;
     text-decoration: none;
-    border-radius: 20px;
-    align-items: center;
     font-family:inherit;
 }
 a:hover {
