--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,25 @@ width: 25%;
   font-weight: lighter;
   }
 
+button {
+  background-color: #78e08f;
+  color:#fff;
+  padding:15px 35px;
+  border:none;
+  border-radius: 27px;
+  transition:0.4s all;
+  outline:none;
+  margin:10% 50%;
+  text-decoration: none;
+  
+}
+button:hover {
+  cursor:pointer;
+  background-color: #fff;
+  color:#78e08f;
+  box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.3);
+}
+
 @media (max-width:1000px) {
 
 .mimg{
