--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ width: 25%;
   }
 
 button {
-  background-color: #7303c0;
+  background-color: #fdeff9;
   color:#fff;
   padding:15px 35px;
   border:none;
@@ -126,7 +126,7 @@ button {
 button:hover {
   cursor:pointer;
   background-color: #fff;
-  color:#7303c0;
+  color:#fdeff9;
   box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.3);
 }
 
