--- a/css/styles.css
+++ b/css/styles.css
@@ -112,21 +112,21 @@ width: 25%;
   }
 
 button {
-  background-color: #fdeff9;
+  background-color: #ec38bc;
   color:#fff;
   padding:15px 35px;
   border:none;
   border-radius: 27px;
   transition:0.4s all;
   outline:none;
-  margin:10% 50%;
+  margin:5% 50% 5% 50%;
   text-decoration: none;
   
 }
 button:hover {
   cursor:pointer;
   background-color: #fff;
-  color:#fdeff9;
+  color:#ec38bc;
   box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.3);
 }
 
