--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ button {
   outline:none;
   text-decoration: none;
   margin-left: 45%;
+  margin-top: 30px;
 }
 button:hover {
   cursor:pointer;
