--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,7 @@ button:hover {
   background-color: #fff;
   color:#ec38bc;
   box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.3);
+  outline:none;
 }
 
 @media (max-width:1000px) {
