--- a/css/appl.css
+++ b/css/appl.css
@@ -209,6 +209,13 @@ display: block;
 #toggleButton{
     display: none;
 }
+
+#imageConverter{
+    height: 140vh;
+}
+.imageGallery{
+    width: 100%;
+}
 @media(max-width:992px){
     /* #sidebar{margin-left:-250px;}
     #sidebar.active{
@@ -236,7 +243,7 @@ display: block;
         position: inherit;
         /* display: block; */
     }
-    
+   
 
 
 
