--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
+*{
+  font-size: 18px;
+}
 body{
-  background-image: linear-gradient(#7303c0,#ec38bc,#fdeff9);
+  background-image: linear-gradient(to right,#4DA0B0,#D39D38);
   font-family: 'Roboto', sans-serif;
   color: #000000;
 }
@@ -112,7 +115,7 @@ width: 25%;
   }
 
 button {
-  background-color: #ec38bc;
+  background-color: #4DA0B0;
   color:#fff;
   padding:15px 35px;
   border:none;
@@ -126,7 +129,7 @@ button {
 button:hover {
   cursor:pointer;
   background-color: #fff;
-  color:#ec38bc;
+  color:#4DA0B0;
   box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.3);
   outline:none;
 }
